--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
-    "bencode": "^3.0.3"
+    "bencode": "^0.9.0",
+    "bignum": "^0.13.1"
   }
 }
